--- a/Pages/Agile/Post-4.html
+++ b/Pages/Agile/Post-4.html
@@ -45,6 +45,7 @@
                     <br/>
 
                     <!-- test commit -->
+                     <!-- test commit 2-->
                     <div class="row-fluid">
                         <div class="span12">
                             <h2>Heading</h2>
