--- a/Pages/Agile/Post-4.html
+++ b/Pages/Agile/Post-4.html
@@ -46,6 +46,7 @@
 
                     <!-- test commit -->
                      <!-- test commit 2-->
+                     <!-- test commit 3-->
                     <div class="row-fluid">
                         <div class="span12">
                             <h2>Heading</h2>
