--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 <div class="tile green icon-featurefade title-indent w1 h1">
                     <a class="link" href="#">
                         <i class="icon-pencil icon-4x"></i>
-                        <p class="title">Java</p>
+                        <p class="title">UI Engineering</p>
                     </a>
                 </div>
 
@@ -153,7 +153,7 @@
                 <div class="tile blue icon-flip title-fadeout w1 h1">
                     <a class="link"   href="Pages/dotNet/dotnetHomePage.html">
                         <i class="icon-pencil icon-4x"></i>
-                        <p class="title">.net Technologies</p>
+                        <p class="title">.net Technologies - Programming</p>
                     </a>
                 </div>
 
@@ -167,7 +167,7 @@
 
                            <!-- <img src="img/01_thumbnail.jpg" alt="" />-->
                             <img src="#" alt="" />
-                            <p class="title">Software Testing</p>
+                            <p class="title">Unit Testing</p>
                         </a>
                     </div>
                     <div class="slide">
@@ -225,7 +225,7 @@
                             <a class="link" href="#">
                                 <div class="title"><i class="icon-file-text icon-2x"></i></div>
                                 <div class="caption-text">
-                                   PHP with MySql
+                                   .net Technologies - Database
                                 </div>
                             </a>
                         </div>
