Index page change 10_04_15

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                     <a class="link" data-scroll="scrollto"  href="#">
                         <!--chnage image in title -->
                         <i class="icon-file-text icon-4x"></i>
-                        <p class="title">Open Source Culture</p>
+                        <p class="title">.Net Open Source Culture</p>
                     </a>
                 </div>
 
